Integrate all components, tree (sibling indexing after addition) bug fixed, student model added

--- a/parser/src/main/resources/training/config.properties
+++ b/parser/src/main/resources/training/config.properties
@@ -1,3 +1,3 @@
-input.path=/input
-output.path=/output
-jar.name=model.jar
+input.path=../parser/target/classes/training/input
+output.path=training/output
+jar.name=/home/al1/IdeaProjects/ModelXmlParser/model/target/model-1.0.jar
