--- a/parser/pom.xml
+++ b/parser/pom.xml
@@ -20,6 +20,12 @@
             <artifactId>junit</artifactId>
             <version>4.8.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.0</version>
+        </dependency>
     </dependencies>
 
     <build>
