--- a/parser/pom.xml
+++ b/parser/pom.xml
@@ -26,6 +26,25 @@
             <artifactId>mockito-all</artifactId>
             <version>1.9.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.2.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.6.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.6.4</version>
+            <!--<scope>test</scope>-->
+        </dependency>
     </dependencies>
 
     <build>
