--- a/parser/src/main/resources/parser/input/Test1.properties
+++ b/parser/src/main/resources/parser/input/Test1.properties
@@ -1,2 +1,2 @@
-test1 = Student(name:Ivan),Group(name:cs-52)
+test1 = Student(name:Ivan,age:19),Group(name:cs-52)
 test2 = Address(city:Kiev,country:Ukraine,street:Dovnara,house:123t)
